divide db model from dto
