# internal/user/model.go
@@ -7,3 +7,7 @@ type User struct {
 	Username string      `json:"username"`
 	Polls    []poll.Poll `gorm:"foreignKey:UserID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE;" json:"polls"`
 }
+
+type CreateUserRequest struct {
+	Username string `json:"username" binding:"required"`
+}
